--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -34,6 +34,7 @@
 @import "views/story-edit";
 @import "views/story-app";
 @import "views/story-details";
+@import "views/user-details";
 
 
 @import "./app";
