--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -1,3 +1,14 @@
 
 
 
+.body{
+    font-family: Arial,sans-serif;
+    line-height: 1.8;
+    color: #262626;
+    margin: 0;
+    background-color: #fafafa;
+}
+
+#nav{
+   padding: 0px 30px  30px 30px  ;
+}
