--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -25,6 +25,8 @@
 @import "cmps/story-filter";
 @import "cmps/story-list";
 @import "cmps/story-preview";
+@import "cmps/user-filter";
+
 
 
 //views
