--- a/src/assets/styles/basics/_helpers.scss
+++ b/src/assets/styles/basics/_helpers.scss
@@ -12,6 +12,14 @@
 }
 // flex helpers
 
+.app-center{
+    margin: 0 auto;
+    max-width: 980px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .flex {
 
     display: flex;
