--- a/src/assets/styles/cmps/_app-header.scss
+++ b/src/assets/styles/cmps/_app-header.scss
@@ -1,14 +1,23 @@
 header {
     // background-color: $clr5;
-    padding: 10px;
-    display: flex;
-    justify-content: space-between;
-    border-bottom:1px solid $clr2; ;
-   
+    // padding: 10px;
 
+    // display: flex;
+    // justify-content: space-between;
+     height: 54px;
+     border-bottom:1px solid $clr2; ;
+   
+.inner-header{
+     display: flex;
+     justify-content: space-between;
+
+}
+.search-container{
+    padding-top: 10px;
+}
     .loggedin-user {
         // background-color: $clr1;
-        padding: 2px 8px;
+        // padding: 2px 8px;
         border-radius: 1em;
         align-self: flex-end;
         color: whitesmoke;
@@ -33,8 +42,8 @@ header {
     }
 
     .user-logo{
-        width: 25px;
-        height: 25px;
+        width: 30px;
+        height: 30px;
         border-radius: 50%;
     }
     .h1-header{
