--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -6,9 +6,11 @@
     line-height: 1.8;
     color: #262626;
     margin: 0;
-    background-color: #fafafa;
+    background-color: #18181a;
 }
 
 #nav{
-   padding: 0px 30px  30px 30px  ;
+ 
+        padding: 0px 0px  0px 0px  ;
 }
+
