--- a/src/assets/styles/cmps/_story-list.scss
+++ b/src/assets/styles/cmps/_story-list.scss
@@ -1,6 +1,3 @@
-.item1 { 
-    // margin-left: 100px;
-    grid-area: 2 / 2 / 3/ 3;
-   
-    // justify-content: center;
- }
+.story-list-container{
+    // position: relative;
+}
