--- a/src/assets/styles/cmps/_story-preview.scss
+++ b/src/assets/styles/cmps/_story-preview.scss
@@ -10,16 +10,31 @@ body {
 
 }
 
+.story-father{
+    position: relative;
+}
+
 .main{
+    //position: relative;
     margin: 30px 0;
+
+
+
 }
 
 .post-details {
+
     max-width: 616px;
     overflow: hidden;
     border-radius: 3px;
     font-size: 13px;
     box-sizing: border-box;
+
+    -webkit-box-sizing: border-box;    //from asi
+
+ 
+    
+    
 }
 
 @media (min-width: 600px){
@@ -29,8 +44,14 @@ body {
     margin-bottom: 60px;
 }
 }
-.story-details-contect{
-    padding: 20px 16px;
+
+.story-img{
+    //  position: relative;  
+}
+.story-details-content{
+    //                                            <======================= modal father ==============================
+     position: relative;                
+    padding: 0px 16px;
     box-sizing: border-box;
 
     font-family: Arial,sans-serif;
@@ -42,14 +63,231 @@ body {
    width: 25px;
    border-radius: 50%;
    display: inline;
+   margin: 0px 16px 0px 0px;
+
+//    padding: 16px;
 
 }
 .post-details-header{
+    padding: 16px;
     display: flex;
     justify-content : space-between;
-    width: 400px;
+    -webkit-box-pack: justify;
+    width: 614px;
+    height: 64px;
     // display: inline;
 }
-.post-details-p{
-    // display: inline;
+.post-details-router{
+    display: inline;
+}
+
+.post-details-router-name{
+    color: #262626;
+    background-color: #fff;
+    font-weight: 600;
+    text-align: left;
+    outline: none;
+}
+
+.svg{
+    fill: #262626;
+    
+}
+.post-details-header-btn{
+    background-color: #fff;
+}
+.comment{
+    display: flex;
+    justify-content: space-between;
+}
+.nolike-comment{
+    border: 0px;
+    height: 12px;
+    border: none;
+}
+.like-comment{
+    fill: #ed4954;
+    // background-origin: padding-box;
+    border: none;
+    height: 12px;
+
+}
+.like{
+    fill: #ed4954;
+    // background-origin: padding-box;
+    border: 0px;
+}
+.nolike{
+    border: 0px;
+}
+.post-actions{
+    display: flex;
+    justify-content : space-between;
+}
+.post-actions-btn-like{
+    background-color: #fff;
+}
+.post-actions-btn{
+    background-color: #fff;
+}
+.like-btn{
+// border: 0;
+
+}
+// .test{
+//     width: 100vw;
+//     border: 5px outset gray;
+//     z-index: 5;
+
+//     color: black;
+//     background-color: pink;
+//     display: flex;
+
+//     background-color: pink;
+//     display: flex;
+//     margin-left: calc(-.5 * var(--child-width) + 50%);
+//     width: var(--child-width);
+
+// }
+// .wide {
+//     margin-left: calc(-37.5vw + 50%);
+//     width: 75vw;
+//     --child-width: 75vw;
+//  }
+
+
+.post-like-btn{
+   color: #262626;
+   background-color: #fff;
+   font-weight: 600;
+   text-align: left;
+   outline: none;
+}
+                        
+.story-name{
+    font-family: Arial, Helvetica, sans-serif; 
+    font-size: 13px;
+    color: #262626;
+    font-weight: 600;
+    padding-right: 3px;
+  
+ 
+}
+                                    // <================ relative
+.post-details-add-comment{                            
+     position: relative;
+    padding: 0 16px;
+    display: flex;
+    align-items: center;
+    min-height: 56px;
+    border-top: outset  ;
+}
+
+textarea{
+    border: 0;
+    width: 100%;
+    outline: 0;
+    font-family: inherit;
+    font-size: inherit;
+
+
+    border: 0;
+    resize: none;
+    color: #8e8e8e;
+    background: transparent;
+}
+
+.post-details-add-comment-btn{
+    color: #0095f6;
+    font-weight: 600;
+    padding: 16px 26px 12px  0px;
+    width: 10px;
+   outline: none;
+   opacity: 0.3;
+
+}
+.post-details-add-comment-btn:hover{
+   
+    // color: #dbe3e9;
+}
+.istxt{
+    opacity: 0.9;
+}
+img{
+    width: 100%;
+    height: 100%;
+}
+
+
+.view-comments{
+    cursor: pointer;
+}
+
+
+
+
+
+
+
+
+  .smily-modal{                                        
+                                //         <================================ smily modal ======================
+        // border:5px solid $clr3; 
+     background-color: rgb(255, 255, 245);
+       max-width: 350px;
+       max-height: 500px;
+      position: absolute;
+      bottom:   0;
+       left: 1;
+     //  right: 0;
+    z-index: 999;
+    bottom: 0;
+    border-radius: 15px 0px 0 15px ;
+    
+}
+.most-popular{
+    width: 300px;
+    font-size: large;
+    color: rgb(155, 152, 152);
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding: 10px;
+  
+}
+.inner-smily-modal{
+      display: flex;
+      flex-direction: row;
+ 
+      flex-wrap: wrap;
+      padding-left: 10px;
+      padding-right: 0;
+
+      width: 100%;
+      height: 70%;
+  }
+
+  .grid{
+      width: 80%;
+      height: 80%;
+    display: grid;
+    grid-template-columns: 70px  70px 70px 70px;
+    grid-template-rows: 60px 60px 60px ;
+    padding: 0;
+    
+  }
+.smily-btn{
+    padding-right: 15px;
+    padding-top: 10px;
+    cursor: pointer;
+}
+.smily-img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 33px;
+    height: 33px;
+    cursor: pointer;
+//  padding: 10px;
+}
+.comment-input{
+    font-size: large;
 }
