--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -1,7 +1,9 @@
 // Colors
 $clr1: #ce2e6c;
-$clr2: #4f3a65;
-$clr3: #574f7d;
+// $clr2: #4f3a65;
+$clr2: #262626;
+$clr3: #262626;
+// $clr3: #574f7d;
 $clr4: #95adbe;
 $clr5: #dff0ea;
 $clr6: #fff;
