--- a/src/assets/styles/views/_user-details.scss
+++ b/src/assets/styles/views/_user-details.scss
@@ -1,4 +1,5 @@
 .main-details{
+  overflow: visible;
 
 
     // display: grid;
@@ -11,7 +12,7 @@
     // flex-wrap: wrap;
     grid-gap: 0px;
     padding: 10px;
-
+  
 
     // display: grid;
     // grid-template-columns: 50px 50px 50px; 
@@ -48,8 +49,9 @@
     width: 150px;
     // height:60% ;
     // width: 55%;
-    margin-right: 15%;
-    margin-top: 5%;
+
+    // margin-right: 15%;    from asi
+    // margin-top: 5%;
 
     // overflow: hidden;
   }
@@ -67,32 +69,65 @@
 
     grid-template-columns: repeat(3,1fr);
     display: grid;
-    grid-gap: 20px 30px ;
+    // grid-gap: 20px 30px ;    from asi
     grid-template-rows: (3,1fr);
+     
+    // from asi
+    grid-gap: 30px;
+    width: 100%;
   }
 
   .profile-posts-item{
+    // cursor: pointer;
+    // position: relative;
+    // overflow: hidden;     from asi
+    // display: inline;
+
+    //  from asi
     cursor: pointer;
     position: relative;
     overflow: hidden;
     display: inline;
+    padding-top: 100%;
+    background: green;
   }
 
   .details-stories-img{
  
-    height:100% ;
-    width: 100%; 
+    // height:100% ;    from asi
+    // width: 100%; 
     
-  }
+    // asi
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+}
+    
+  
 
   .details-container{
-    display: flex;
-    flex-direction: column;
-    text-align: left;
+    // display: flex;
+    // flex-direction: column;
+    // text-align: left;             from asi
+    // padding: 10px;
+
+
     // display: grid;
     // grid-template-columns:  100px 100px 100px ;
     // grid-template-rows: 100px 100px 100px ;
     // grid-gap: 10px;
+
+
+    // from asi
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    text-align: left;
     padding: 10px;
   }
 
@@ -145,4 +180,50 @@
     margin-inline-start: 0px;
     margin-inline-end: 0px;
     font-size: 16px;
+  }
+
+
+  .details-story-modal{
+
+    box-shadow: 5px 10px 10px 100vh #888888be;
+    // box-shadow: 5px 10px 10px 200px #858484be;
+    // border:10px solid $clr5; 
+    height: 557px;
+    width: 935px;
+     z-index: 22;
+     position: fixed;
+    background-color: #fff;
+  }
+
+
+  .modal-content{
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+  }
+
+  .story-modal-img-container{
+    
+    width: 100%;
+    // width: 100%;
+    // flex-shrink: 1;
+  }
+  .img-modal{
+      max-width: 100%;
+    //  object-fit: cover;
+   
+
+  }
+
+  .post-modal{
+    // flex-grow: 5;
+    // flex-shrink: 2;
+    max-width: 30%;
+  }
+  
+  .hide{
+    display: none
+  }
+  .show{
+    display: block
   }
