--- a/src/assets/styles/cmps/story-preview-modal-container.scss
+++ b/src/assets/styles/cmps/story-preview-modal-container.scss
@@ -13,7 +13,7 @@
     // height: 100px;
     // width: 100px;
     top: 5;
-    left: 10;
+    left: 300px;
     z-index: 22;
     position: fixed;
     background-color: #fff;
