--- a/src/assets/styles/cmps/_app-header.scss
+++ b/src/assets/styles/cmps/_app-header.scss
@@ -18,8 +18,8 @@ header {
      -webkit-box-pack: justify;
 
 }
-.instagram-logo{
-    padding-right: 16px;
+.home-logo{
+    padding: 16px;
     //  padding-top: 60px;
 }
 .search-container{
@@ -110,21 +110,33 @@ header {
     .hart{
       color: rgb(31, 13, 128);
     }
+//     .hide :hover{
+//         display: block;
+//     }
+//     .hide{
+//         display: none;
+//    }
+//    .show{
+//        display: block;
+//    }
+    .pluse-img-btn{
+      padding-left: 16px;
+    }
     .pluse-img{
         width: 25px;
-        padding: 0;
+        padding-right: 0px;
     }
     .t{
        
         padding: 10px;
     }
     .modal-container{
-  
+        // position: absolute;
         
     }
 
     .fade-enter-active, .fade-leave-active {
-        transition: opacity .5s;
+        transition: opacity .1s;
       }
       .fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
         opacity: 0;
