--- a/src/assets/styles/cmps/_story-preview-modal.scss
+++ b/src/assets/styles/cmps/_story-preview-modal.scss
@@ -56,7 +56,7 @@
 .story-actions-preview{
     
 }
-.acreen-preview{
+.screen-preview{
     display: flex;
     justify-content: center;
     align-items: center;
