--- a/src/assets/styles/cmps/_story-comment.scss
+++ b/src/assets/styles/cmps/_story-comment.scss
@@ -2,6 +2,7 @@
    display: flex;
    justify-content: space-between;
    padding: 5px;
+   width: inherit;
 }
 
 .test{
@@ -22,10 +23,17 @@
     margin: 0px 16px 0px 0px;
 }
  .light-comment{
-    font-family: Arial, Helvetica, sans-serif; 
-    font-size: 13px;
+     font-family: Arial, Helvetica, sans-serif; 
+     font-size: 13px;
     color: #262626;
     padding-right: 3px; 
+
+
+   //  margin: 0;
+   //  padding: 0;
+   //  border: 0;
+     vertical-align: baseline;
+
  }
  .heavy-comment{
    font-family: Arial, Helvetica, sans-serif; 
