--- a/src/assets/styles/cmps/story-preview-modal-container.scss
+++ b/src/assets/styles/cmps/story-preview-modal-container.scss
@@ -7,11 +7,8 @@
     // align-items: center;
 
     box-shadow: 5px 10px 10px 100vh #888888be;    
-
     height: 557px;
     width: 935px;
-    // height: 100px;
-    // width: 100px;
     top: 5;
     left: 300px;
     z-index: 22;
@@ -47,7 +44,7 @@
 .story-preview-post-modal{
     // flex-grow: 5;
     // flex-shrink: 2;
-    max-width: 100%;
+    max-width: 365px;
     height: 100%;
     // height: inherit;
   }
