--- a/src/assets/styles/cmps/comment-input.scss
+++ b/src/assets/styles/cmps/comment-input.scss
@@ -3,7 +3,7 @@
     padding: 0 16px;
     display: flex;
     align-items: center;
-    height: 56px;
+    max-height: 56px;
     // border-top: outset  ;
     
     
