--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -15,10 +15,10 @@
 
 
 // Components
+@import "cmps/story-chat";
 @import "cmps/app-header";
 @import "cmps/review-list";
 @import "cmps/app-footer";
-@import "cmps/app-chat";
 @import "cmps/story-preview";
 @import "cmps/story-filter";
 @import "cmps/story-list";
