--- a/src/assets/styles/views/_story-app.scss
+++ b/src/assets/styles/views/_story-app.scss
@@ -43,6 +43,11 @@
        font-size: 20px;
     }
 }
+@media screen and (max-width: 800px) {
+    .open-chat{
+        display: none;
+    }
+  }
 
 .open-chat{
     cursor: pointer;
