--- a/src/assets/styles/views/_user-details.scss
+++ b/src/assets/styles/views/_user-details.scss
@@ -39,13 +39,14 @@
   
 //   }
 .img-container{
-  width: 330px;
+  // max-width: 330px;
 }
 
   .details-img{
-    border-radius: 50%;
+    padding-top: 10px;
+    border-radius: 150%;
     height:150px ;
-    width: 150px;
+    width:150px;
     // height:60% ;
     // width: 55%;
 
@@ -219,3 +220,61 @@
   .show{
     display: block
   }
+
+ @media screen and (max-width: 600px) {
+
+//   .profile-posts{
+//     grid-template-columns: repeat(3,1fr);
+//     display: grid;
+//     grid-template-columns: (3,1fr);
+//     grid-gap: 30px;
+//     width: 100%;
+//  }
+
+.details-img{
+  padding-top: 10px;
+  border-radius: 150%;
+  height: 70px ;
+  width: 70px;
+
+}
+
+
+.details-container{
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  text-align: left;
+  padding: 3px;
+}
+
+
+.profile-description-top-username{
+
+  padding: 1px 0 1px;
+  font-size: 1px;
+       font-family: 'Times New Roman', Times, serif;
+      display: block;
+      font-size: 1.5em;
+      margin-block-start: 0.83em;
+      margin-block-end: 0.83em;
+      margin-inline-start: 0px;
+      margin-inline-end: 0px;
+}
+
+.profile-description-top{
+  padding: 15px 0 1px 60px;
+  font-size: 15px;
+  width: 510px;
+  height:  69px;
+}
+
+.followers-num{
+  display: flex;
+  flex-direction: row;
+  padding-top: 0;
+}
+
+}
