--- a/src/assets/styles/cmps/_story-preview.scss
+++ b/src/assets/styles/cmps/_story-preview.scss
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    
 }
 body {
     font-family: Arial,sans-serif;
@@ -23,7 +24,7 @@ body {
 }
 
 .post-details {
-
+    border: 1px solid #dbdbdb;
     max-width: 616px;
     overflow: hidden;
     border-radius: 3px;
@@ -55,11 +56,10 @@ body {
     //  position: relative;  
 }
 .story-details-content{
-    //                                            <======================= modal father ==============================
-     position: relative;                
+    padding-top: 0px;              //                     <======================= modal father ==============================
+    position: relative;                
     padding: 0px 16px;
     box-sizing: border-box;
-
     font-family: Arial,sans-serif;
     line-height: 1.8;
     color: #262626;
@@ -186,6 +186,7 @@ body {
     display: flex;
     align-items: center;
     min-height: 56px;
+  //  border: 1px solid #dbdbdb;
     border-top: outset  ;
 }
 
@@ -197,7 +198,6 @@ textarea{
     font-size: inherit;
 
 
-    border: 0;
     resize: none;
     color: #8e8e8e;
     background: transparent;
