--- a/src/assets/styles/cmps/delete-modal.scss
+++ b/src/assets/styles/cmps/delete-modal.scss
@@ -4,15 +4,18 @@
     align-items: center;
     right: 0px;
     position:absolute ;
-    background-color: rgba(192, 223, 160, 0.774);
-    top:-10px;
-    right: -30px;
+    background-color: rgba(236, 240, 232, 0.774);
+    top:-40px;
+    right: -40px;
     width: 100px;
     height: 100px;
     border-radius: 6px;
 }
 .delete-post-btn{
     border-radius: 10px;
-    background-color: rgba(78, 116, 150, 0.877);
+    // background-color: rgba(236, 240, 232, 0.774);
     padding-inline-end: 10px;
+    background-color: Transparent;
+    height: 30px;
+    outline:none;
 }
