--- a/src/assets/styles/views/_user-details.scss
+++ b/src/assets/styles/views/_user-details.scss
@@ -11,6 +11,7 @@
     // flex-wrap: wrap;
     grid-gap: 0px;
     padding: 10px;
+    height: 100vh;
   
 
     // display: grid;
@@ -39,6 +40,7 @@
   
 //   }
 .img-container{
+  padding-top: 30px;
   // max-width: 330px;
 }
 
@@ -55,6 +57,14 @@
 
     // overflow: hidden;
   }
+
+
+.profile-tabs-tab{
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: 600;
+  padding: 20px;
+}
 
 
   // POSTS
@@ -129,6 +139,7 @@
     flex-direction: column;
     text-align: left;
     padding: 10px;
+    padding-left: 200px;
   }
 
   .profile-description-top{
@@ -196,8 +207,7 @@
   }
 
   .story-modal-img-container{
-    
-    width: 100%;
+     width: 100%;
     // width: 100%;
     // flex-shrink: 1;
   }
@@ -223,13 +233,15 @@
 
  @media screen and (max-width: 600px) {
 
-//   .profile-posts{
-//     grid-template-columns: repeat(3,1fr);
-//     display: grid;
-//     grid-template-columns: (3,1fr);
-//     grid-gap: 30px;
-//     width: 100%;
-//  }
+  .profile-posts{
+    grid-template-columns: repeat(2,1fr);
+    display: grid;
+    grid-template-rows: (3,1fr);
+    grid-gap: 10px;
+    width: 70%;
+    padding-right: 160px;
+    height: 100%;
+ }
 
 .details-img{
   padding-top: 10px;
@@ -248,20 +260,21 @@
   flex-direction: column;
   text-align: left;
   padding: 3px;
+  font-size: small;
 }
 
 
 .profile-description-top-username{
 
-  padding: 1px 0 1px;
-  font-size: 1px;
-       font-family: 'Times New Roman', Times, serif;
-      display: block;
-      font-size: 1.5em;
-      margin-block-start: 0.83em;
-      margin-block-end: 0.83em;
-      margin-inline-start: 0px;
-      margin-inline-end: 0px;
+    padding: 1px 0 1px;
+    font-size: 1px;
+    font-family: 'Times New Roman', Times, serif;
+    display: block;
+    font-size: 1.5em;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
 }
 
 .profile-description-top{
